<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bike_shorts_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bike_shorts" />

    <Button
        android:id="@+id/swimsuit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swimsuit" />

    <Button
        android:id="@+id/bikini_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bikini" />

    <Button
        android:id="@+id/rape_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rape" />

    <Button
        android:id="@+id/big_breasts_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_breasts" />

</LinearLayout>