<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/chinese_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chin" />

    <Button
        android:id="@+id/russian_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RUS" />

    <Button
        android:id="@+id/english_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eng" />

    <Button
        android:id="@+id/korean_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/koo" />


</LinearLayout>